--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.ocpsoft.prettytime</groupId>
+			<artifactId>prettytime</artifactId>
+			<version>5.0.2.Final</version>
+		</dependency>
+		<!-- Test Dependencies	-->
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
